<resources>
    <string name="app_name">Itsme</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_splash_screen">SplashScreen</string>
    <string name="title_activity_tags">Tags</string>
    <string name="title_activity_profil">Profil</string>
    <string name="title_activity_nachrichten">Nachrichten</string>
    <string name="title_activity_matching">Matching</string>
    <string-array name="pages_array">
        <item>Tags</item>
        <item>Profil</item>
        <item>Nachrichten</item>
        <item>Matching</item>
        <item>Switch to button mode</item>
    </string-array>
    <string name="title_activity_tutorial">Tutorial</string>
    <string name="Profile">profile</string>
    <string name="title_activity_fragment_swipe">FragmentSwipe</string>
    <string name="title_activity_profile">Profile</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Tags">Tags</string>
    <string name="News">News</string>
    <string name="Matching">Matching</string>

    <string-array name="tabs">
        <item>Tags</item>
        <item>Profile</item>
        <item>News</item>
        <item>Matching</item>
    </string-array>

</resources>
