<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:tools="http://schemas.android.com/tools"
      tools:context="at.fhooe.mc.android.itsme.FragmentSwipe">

    <item android:id="@+id/profile"
          android:title="@string/Profile"
          android:orderInCategory="100"
          android:showAsAction ="always"
          android:icon="@drawable/profile2"/>

    <item android:id="@+id/tags"
          android:title="@string/Tags"
          android:orderInCategory="100"
          android:showAsAction ="always"
          android:icon="@drawable/tags"/>

    <item android:id="@+id/news"
          android:title="@string/News"
          android:orderInCategory="100"
          android:showAsAction ="always"
          android:icon="@drawable/news"/>

    <item android:id="@+id/matching"
          android:title="@string/Matching"
          android:orderInCategory="100"
          android:showAsAction ="always"
          android:icon="@drawable/matching"/>
</menu>
